--- a/parts/header-h1.html
+++ b/parts/header-h1.html
@@ -3,5 +3,5 @@
 
 <!-- wp:site-tagline {"textAlign":"center"} /-->
 
-<!-- wp:navigation {"ref":82,"overlayMenu":"never","layout":{"type":"flex","justifyContent":"center"}} /--></div>
+<!-- wp:navigation {"overlayMenu":"never","layout":{"type":"flex","justifyContent":"center"}} /--></div>
 <!-- /wp:group -->
