--- a/parts/header-p.html
+++ b/parts/header-p.html
@@ -2,4 +2,4 @@
 
 <!-- wp:site-tagline {"textAlign":"center"} /-->
 
-<!-- wp:navigation {"ref":82,"overlayMenu":"never","layout":{"type":"flex","justifyContent":"center"}} /-->
+<!-- wp:navigation {"overlayMenu":"never","layout":{"type":"flex","justifyContent":"center"}} /-->
