feat: update for wp 6.7

--- a/parts/header-p.html
+++ b/parts/header-p.html
@@ -1,5 +1,7 @@
-<!-- wp:site-title {"level":0,"textAlign":"center"} /-->
+<!-- wp:group {"layout":{"type":"constrained"}} -->
+<div class="wp-block-group"><!-- wp:site-title {"level":0,"textAlign":"center"} /-->
 
 <!-- wp:site-tagline {"textAlign":"center"} /-->
 
-<!-- wp:navigation {"overlayMenu":"never","layout":{"type":"flex","justifyContent":"center"}} /-->
+<!-- wp:navigation {"overlayMenu":"never","layout":{"type":"flex","justifyContent":"center"}} /--></div>
+<!-- /wp:group -->
