--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,5 +1,5 @@
-<!-- wp:group {"layout":{"inherit":true}} -->
-<div class="wp-block-group"><!-- wp:paragraph -->
-<p>Das ist ein Absatz, diesmal im Block-Theme-Footer.</p>
-<!-- /wp:paragraph --></div>
+<!-- wp:group {"tagName":"footer","layout":{"type":"constrained"}} -->
+<footer class="wp-block-group"><!-- wp:paragraph -->
+<p>Hier ist der Footer.</p>
+<!-- /wp:paragraph --></footer>
 <!-- /wp:group -->
