--- a/parts/header-h1.html
+++ b/parts/header-h1.html
@@ -1,4 +1,4 @@
-<!-- wp:group {"layout":{"inherit":true}} -->
+<!-- wp:group {"layout":{"type":"constrained"}} -->
 <div class="wp-block-group"><!-- wp:site-title {"textAlign":"center"} /-->
 
 <!-- wp:site-tagline {"textAlign":"center"} /-->
